# WHY_CPP_arkanoid

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  game.js  game.wasm
CMake/: ConfigureWhyCpp.cmake  DownloadWhyCpp.cmake
html/: index.html
include/ecs/: engine.h  entity.h  entity_manager.h  i_component.h  i_system.h  system_manager.h
include/game/: arkanoid_ecs.h  bonus_spawner.h  fps_logger.h  state.h
include/game/components/: audio_component.h  ball_component.h  brick_component.h  circle_render_component.h  movement_component.h  platform_component.h  player_control_component.h  rect_collider_component.h  rectangle_render_component.h  rigid_body_component.h  texture_component.h  transform_component.h
include/game/entities/: bonuses.h  entities.h
include/game/levels/: i_level_creator.h  lvl_1_creator.h  lvl_2_creator.h  lvl_3_creator.h  lvl_4_creator.h
include/game/scenes/: ecs_scene.h  fail_scene.h  game_scene.h  next_level_scene.h  title_scene.h  win_scene.h
include/game/systems/: audio_system.h  ball_control_system.h  bricks_system.h  cheat_system.h  circle_render_system.h  collision_system.h  movement_system.h  multi_ball_bonus_system.h  physics_system.h  player_control_system.h  rectangle_render_system.h  resize_bonus_system.h  shredder_system.h  texture_render_system.h
include/game/utils/: collision.h  counter.h  true_random.h
include/lib/: scene.h  scene_manager.h  state.h
include/lib/ecs/: engine.h  entity.h  entity_manager.h  i_system.h  system_manager.h
include/lib/matlib/: aabb.h  colliders.h  manifold.h  vec2.h
include/lib/music/: music_assets.h  music_manager.h
include/matlib/: aabb.h  manifold.h  numbers.h  vec2.h
src/: arkanoid.cpp  arkanoid.h  arkanoid_ecs.cpp  arkanoid_ecs.h  ball.cpp  ball.h  brick.cpp  brick.h  main.cpp  platform.cpp  platform.h  rectangle.cpp  rectangle.h
src/ECS/: engine.h  entity.h  entity_manager.h  i_system.h
src/components/: ball_component.h  movement_component.h  player_control_component.h  rectangle_render_component.h  texture_component.h  transform_component.h
src/ecs/: engine.cpp  entity_manager.cpp  i_system.cpp  system_manager.cpp
src/game/: arkanoid_ecs.cpp  bonus_spawner.cpp  fps_logger.cpp  main.cpp
src/game/entities/: ball.cpp  bonuses.cpp  border.cpp  brick.cpp  music.cpp  platform.cpp
src/game/scenes/: ecs_scene.cpp  fail_scene.cpp  game_scene.cpp  game_scene_init_systems.cpp  next_level_scene.cpp  title_scene.cpp  win_scene.cpp
src/game/systems/: audio_system.cpp  ball_control_system.cpp  bricks_system.cpp  cheat_system.cpp  circle_render_system.cpp  collision_system.cpp  movement_system.cpp  multi_ball_bonus_system.cpp  physics_system.cpp  player_control_system.cpp  rectangle_render_system.cpp  resize_bonus_system.cpp  shredder_system.cpp  texture_render_system.cpp
src/lib/: scene.cpp  scene_manager.cpp
src/lib/ecs/: engine.cpp  entity_manager.cpp  i_system.cpp  system_manager.cpp
src/lib/matlib/: aabb.cpp  numbers.cpp  (+3 more)
src/matlib/: aabb.cpp  colliders.cpp  manifold.cpp  numbers.cpp  vec2.cpp
src/systems/: ball_control_system.cpp  ball_control_system.h  player_control_system.cpp  player_control_system.h  rectangle_render_system.cpp  rectangle_render_system.h  texture_render_system.cpp  texture_render_system.h
(+26 files in other folders)
